fix: update deps before linting
Signed-off-by: Bruno Bressi <bruno.bressi@telekom.de>

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -13,4 +13,5 @@ jobs:
     - name: Helm lint
       run: |
         curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+        helm dependency update
         make lint
