Feat/microservices and default egress (#43)
* WIP feat: added rke2 controllermanager subchart

* WIP feat: added rke2 etcd subchart

* WIP feat: added rke2 ingressnginx subchart

* WIP feat: added rke2 proxy subchart

* WIP feat: added rke2 scheduler sub chart

* feat: added new subcharts to main chart

This commit also add the standard values for the subcharts and the
needed dependencies, so that the new subcharts can be actually used.

* feat: new ingress network policies for pushproxies

The new default ingress network policy is needed when running those rke2
components with a calico CNI.

* feat: added linting target

* fix: corrected netpol syntax

* fix: corrected pod selectors syntax

* feat: added default egress and microservices egress

This will allow the prometheus to scrape the standard ports which are
exposed from the various standard components rolled out with the chart,
like kube-state-metrics and so on. Additionally, this commit adds the
option to also scrape the caas microservices.

* chore: removed uneeded namespace

The namespace was hardcoded.

* chore: 1.0.3rc0

* chore: bumped prom-auth for OIDC hotfix

Signed-off-by: Bruno Bressi <bruno.bressi@telekom.de>

* --amend

Signed-off-by: Bruno Bressi <bruno.bressi@telekom.de>

* chore: stable version

Signed-off-by: Bruno Bressi <bruno.bressi@telekom.de>

* chore: stable version

Signed-off-by: Bruno Bressi <bruno.bressi@telekom.de>

* fix: corrected chart versions

Signed-off-by: Bruno Bressi <bruno.bressi@telekom.de>

* fix: corrected chart versions

Signed-off-by: Bruno Bressi <bruno.bressi@telekom.de>

* feat: added linting for all charts

* chore: bumped chart apiversion

* chore: chart lock pushed

Signed-off-by: Bruno Bressi <bruno.bressi@telekom.de>

* chore: updated linting CI job to actually lint everything

Signed-off-by: Bruno Bressi <bruno.bressi@telekom.de>

* fix: update deps before linting

Signed-off-by: Bruno Bressi <bruno.bressi@telekom.de>

---------

Signed-off-by: Bruno Bressi 

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -13,6 +13,5 @@ jobs:
     - name: Helm lint
       run: |
         curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
-        helm version
         helm dependency update
-        helm lint .
+        make lint
