fix: added missing kubelet ingress policy
This policy was unfortunately forgotten when adding the hardened ingress policies for the
other pushprox pods. This blocked prometheus from scraping the kubelet of all other nodes except
the node on which the proxy itself was running, probably because of the standard np-default policy (which should
generally allow all incoming traffic from within the project to all pods of the project - anyway!).

Signed-off-by: Bruno Bressi <bruno.bressi@telekom.de>

--- a/Chart.yaml
+++ b/Chart.yaml
@@ -3,7 +3,7 @@ annotations:
   catalog.cattle.io/display-name: CaaS Cluster Monitoring V3
 name: caas-cluster-monitoring
 description: A Helm chart for Rancher Cluster Monitoring V3
-version: "1.0.4"
+version: "1.0.5-rc0"
 appVersion: "68.1.1"
 icon: https://raw.githubusercontent.com/caas-team/caas-project-monitoring/main/logo.png
 keywords:
@@ -35,7 +35,7 @@ dependencies:
 - condition: hardenedKubelet.enabled
   name: hardenedKubelet
   repository: file://./charts/hardenedKubelet
-  version: 0.2.1
+  version: 0.2.2
 - condition: rke2ControllerManager.enabled
   name: rke2ControllerManager
   repository: file://./charts/rke2ControllerManager
