--- a/charts/hardenedKubelet/values.yaml
+++ b/charts/hardenedKubelet/values.yaml
@@ -164,3 +164,7 @@ proxy:
     repository: rancher/pushprox-proxy
     tag: v0.1.3-rancher2-proxy
   command: ["pushprox-proxy"]
+
+networkPolicy:
+  # If set to true, a NetworkPolicy will be created that allows ingress traffic to the proxy
+  enabled: true
